update(master): personal information

--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "2.0.0",
   "description": "Oleksadr's Personal Portfolio",
   "main": "index.js",
-  "author": "HaoMing Lin",
+  "author": "Brandon Baker",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/Winner960111/Winner960111.github.io/issues"
   },
   "keywords": [
     "HaoMing",
-    "HaoMing Lin",
-    "HaoMing Lin Portfolio",
+    "Brandon Baker",
+    "Brandon Baker Portfolio",
     "JayantGoel001",
     "Oleksadr (Winner960111)'s Personal Portfolio"
   ],
